# operations

./: ChangeLog.md  operations.cabal
src/: Example.hs  NatOps.hs  Object.hs  TypeListOps.hs
