name:                operations
version:             0.1.0.0
synopsis:            Exploration of a notion of objects
-- description:         
homepage:            https://github.com/glguy/operations
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Object
  other-modules:       TypeListOps
  build-depends:       base >=4.9 && <4.10, constraints
  hs-source-dirs:      src
  default-language:    Haskell2010
